--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 vim/backup/*
 vim/temp/*
+python/ipython.symlink/profile_default/db/
+python/ipython.symlink/profile_default/history.sqlite
+python/ipython.symlink/profile_default/startup/README
