--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-vim/backup/*
-vim/temp/*
+.DS_Store
+*.local
+*.local.*
+
 python/ipython.symlink/profile_default/db/
 python/ipython.symlink/profile_default/history.sqlite
 python/ipython.symlink/profile_default/startup/README
